--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: "3"
 
 services:
   plumber_test:
-    restart: unless-stopped
-    image: rstudio/plumber
+    restart: "no"
+    build: .
+    image: ecalab/rstudio_plumber 
     container_name: plumber_test
     ports:
       - "8000:8000"
